objects/vlocity_ins__OfferMigrationComponentMapping__c.object
<CustomObject>
    <description>RESERVED. For future use under Insurance and Health.</description>
    <fields>
        <fullName>vlocity_ins__OfferMigrationPlanId__c</fullName>
        <label>Offer Migration Plan</label>
        <referenceTo>vlocity_ins__OfferMigrationPlan__c</referenceTo>
        <relationshipLabel>Offer Migration Component Mappings</relationshipLabel>
        <relationshipName>OfferMigrationComponentMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SourceProductId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>TargetProductId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This tells if any component mapping is active or inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer Migration Component Mapping</label>
    <nameField>
        <label>Offer Migration Component Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Migration Component Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>